feat(gallery) : implement master galery
